@@ -14,5 +14,12 @@
 %%  ~~describe this method here~~
 }
 }}
+\examples{
+data(sp1)
+sp1$soil_color <- with(sp1, munsell2rgb(hue, value, chroma))
+depths(sp1) <- id ~ top + bottom	
+s <- slice(sp1, 10 ~ prop + name + soil_color)
+
+}
 \keyword{methods}
 \keyword{ ~~ other possible keyword(s) ~~ }
